# localcomm

./: Cargo.toml
src/: cli.rs  main.rs
src/commands/: chat.rs  discover.rs  list.rs  mod.rs  send.rs  serve.rs  transfer.rs  tui.rs
src/discovery/: mdns.rs  mod.rs
src/protocol/: message.rs  mod.rs
src/transport/: connection.rs  mod.rs  tcp.rs
