[package]
name = "localcomm"
version = "0.1.0"
edition = "2024"

[[bin]]
name= "localcomm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = { version = "4.4", features = ["derive", "cargo"] }
hostname = "0.4.2"
indicatif = "0.18.3"
mdns-sd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.6", features = ["v4", "serde"]}
